applications/authorization-server/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: quizmeup
  name: authorization-server-deployment
  labels:
    app.kubernetes.io/component: deployment
    app.kubernetes.io/name: quizmeup-authorization-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: service
      app.kubernetes.io/name: quizmeup-authorization-server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: service
        app.kubernetes.io/name: quizmeup-authorization-server
    spec:
      containers:
        - name: authorization-server-container
          image: quizmeup/authorization-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 380Mi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              port: 8080
              scheme: HTTP
              path: /actuator/health/liveness
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 120
          readinessProbe:
            failureThreshold: 3
            httpGet:
              port: 8080
              scheme: HTTP
              path: /actuator/health/readiness
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 120
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
