applications/authorization-server/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authorization-server-ingress
  namespace: quizmeup
